--- a/application/pubspec.yaml
+++ b/application/pubspec.yaml
@@ -1,4 +1,4 @@
-name: GOSTGuard
+name: gostguard
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^1.1.2
+  open_file: ^3.3.3
+  path_provider: ^2.1.1
+  path: ^1.8.3
   http: ^1.2.2
   uuid: ^4.2.1
   shared_preferences: ^2.2.2
